Modify swagger, add new endpoints for notifications
